--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11,<3.14"
 dependencies = [
     "anthropic>=0.39.0",
     "openai>=1.0.0",
+    "google-genai>=1.0.0",
     "pyautogui>=0.9.54",
     "streamlit>=1.29.0",
     "Pillow>=10.0.0",
